<resources>
    <string name="app_name">BloodBank</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="address">Address: </string>
    <string name="e_mail">E-mail: </string>
    <string name="name_of_person">Donor: </string>
    <string name="blood_group">Blood Group</string>
    <string name="phone">Phone: </string>
    <string name="reasons_for_giving_blood">Reasons for giving blood?</string>
    <string name="note_">New here? Click one of the buttons below to sign up...</string>


    <string-array name="blood_group_arrays">
        <item>A+</item>
        <item>B+</item>
        <item>O+</item>
        <item>AB+</item>
        <item>A-</item>
        <item>B-</item>
        <item>O-</item>
        <item>AB-</item>
    </string-array>

    <string-array name="city_array">

    </string-array>
</resources>