<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".screens.ViewOneDonor"
    android:background="@color/colorWhite">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/linearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_person_red" />

            <TextView
                android:id="@+id/donorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/name_of_person"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/donorBloodGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/donorName"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:text="@string/blood_group"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/donorPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/donorBloodGroup"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:text="@string/phone"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/donorEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/donorPhone"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:text="@string/e_mail"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/donorAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/donorEmail"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:text="@string/address"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/donorCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/donorAddress"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:text="@string/address"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/donorCity"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@color/colorWhite"
                android:onClick="onCall"
                android:src="@drawable/call_btn" />

            <Button
                android:id="@+id/bookAnAppointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageButton"
                android:onClick="onBookBloodDonation"
                android:padding="5dp"
                android:textColor="#fff"
                android:background="@drawable/button_design"
                android:layout_centerHorizontal="true"
                android:text="Book A DONATION REQUEST" />

        </RelativeLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>